--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,5 @@
 project('singer', 'c')
+threads = dependency('threads')
 gstreamer = dependency('gstreamer-1.0')
 src = ['singer.h', 'singer.c']
-static_library('singer', sources: src, version: '0.1.0', dependencies : [gstreamer])
+static_library('singer', sources: src, version: '0.1.0', dependencies : [threads, gstreamer])
