using library instead of static_library in meson.build

--- a/meson.build
+++ b/meson.build
@@ -2,4 +2,4 @@ project('singer', 'c')
 threads = dependency('threads')
 gstreamer = dependency('gstreamer-1.0')
 src = ['singer.h', 'singer.c']
-static_library('singer', sources: src, version: '0.1.0', dependencies : [threads, gstreamer])
+library('singer', sources: src, version: '0.1.0', dependencies : [threads, gstreamer])
