generating a pkg-config file with meson build

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,7 @@
 project('singer', 'c')
+pkgconfig = import('pkgconfig')
 threads = dependency('threads')
 gstreamer = dependency('gstreamer-1.0')
 src = ['singer.h', 'singer.c']
-library('singer', sources: src, version: '0.1.0', dependencies : [threads, gstreamer])
+singer = library('singer', sources: src, version: '0.1.0', dependencies : [threads, gstreamer])
+pkgconfig.generate(singer)
